# Lite3_lowlevel_sdk

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.cpp
communication/: comm_bridge.hpp  nx_network_codes.hpp
examples/: nx_simple_controller.cpp  nx_simple_controller.py
interface/: CMakeLists.txt
nx_bridge/: nx_bridge.cpp  nx_bridge_api.hpp
nx_bridge_py/: __init__.py  nx_bridge.py
scripts/: test_nx.py
state_machine/: rl_control_state_remote.hpp  rl_handshake_state.hpp  standup_state.hpp  state_base.h  state_machine.hpp
types/: custom_types.h
